# dify-patcher

./: .gitignore  ARCHITECTURE.md  FRONTEND_PATTERNS_ANALYSIS.md  INSTALLATION_VERIFICATION.md  LICENSE  MCP_NODE_BRIDGE.md  PANEL_EXTENSION.md  README.md  STATE_MANAGEMENT_ANALYSIS.md  TYPE_SYSTEM.md  VERIFICATION_REPORT.md  tsconfig.json
conventions/: README.md  backend-analysis-summary.md  backend-implementation-guide.md  backend-patterns.md  backend-quick-reference.md  common-mistakes.md  custom-panel-guide.md  edge-patterns.md  input-types.md  panel-components.md  variable-system.md
generator/: README.md  __init__.py  __main__.py  cli.py  node_generator.py  schema_extractor.py
generator/examples/: filesystem-tools.json
installer/cli/: .gitignore  README.md  package-lock.json  package.json
installer/cli/src/: index.ts  installer.ts  types.ts  utils.ts
installer/patches/: 001-custom-panel-loader.patch
nodes/advanced-panel-example/: README.md  manifest.json
nodes/advanced-panel-example/backend/: __init__.py  node.py
nodes/advanced-panel-example/frontend/: default.ts  index.ts  node.tsx  panel.tsx  types.ts  use-config.ts
nodes/agno-agent/: README.md  manifest.json
nodes/agno-agent/backend/: __init__.py  node.py
nodes/agno-agent/frontend/: default.ts  index.ts  node.tsx  panel.tsx  types.ts  (+1 more)
nodes/claude-code-executor/: manifest.json
nodes/custom-ai-node/: manifest.json
nodes/mcp-list-directory/: manifest.json
nodes/stateful-chat-example/: README.md  manifest.json
nodes/test-node/: README.md  manifest.json
nodes/weather-api/: README.md  manifest.json
scripts/: create-node.sh  dev.sh
sdk/python/: README.md  pyproject.toml
sdk/python/dify_custom_nodes/: __init__.py  base_node.py  decorators.py  state_helpers.py  types.py
sdk/typescript/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
(+48 files in other folders)
